feat(video-transcode): integrate multi-resolution HLS into consumer
Add video stream validation after chunk merge. Implement adaptive HLS variant selection (720P/480P) based on source resolution. Generate master.m3u8 playlist referencing all resolution variants. Remove redundant fileName field transfer from DTO.