@@ -2,6 +2,7 @@ package com.neon.nilomqconsumer.consumer;
 
 import com.neon.nilocommon.entity.constants.Constants;
 import com.neon.nilocommon.entity.constants.MqInfo;
+import com.neon.nilocommon.entity.constants.VideoResolution;
 import com.neon.nilocommon.entity.dto.UploadedVideoFileDTO;
 import com.neon.nilocommon.entity.enums.videoInfoFileUpload.VideoFileStatus;
 import com.neon.nilocommon.entity.enums.videoInfoUpload.VideoStatus;
@@ -24,9 +25,12 @@ import org.springframework.stereotype.Component;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -48,10 +52,10 @@ public class VideoTransCodingConsumer
      * 任务流程：<br/>
      * <li>1. 从redis查询转码文件的记录，获取文件地址</li>
      * <li>2. 将文件从临时目录转移到视频目录</li>
-     * <li>3. 将文件合并、转码位TS文件</li>
+     * <li>3. 将文件合并、转码为TS文件</li>
      * <li>4. 将TS文件分割并生成m3u8</li>
      * <li>5. 将当前文件标记为转码成功，并查询所有该视频下文件转码信息</li>
-     * <li>6. 若有视频文件转码失败，将视频文件状态标记位转码失败</li>
+     * <li>6. 若有视频文件转码失败，将视频文件状态标记为转码失败</li>
      * <li>7. 若所有视频文件转码成功，计算视频总时长并将视频标记为待审核状态</li>
      * <hr/>
      * 填写了 VideoInfoFileUpload 的file_name, file_size, file_path, duration, transfer_result这几个字段
@@ -86,6 +90,12 @@ public class VideoTransCodingConsumer
             String completeVideoPath = to + "/" + Constants.TMP_VIDEO_NAME;
             VideoMergeUtils.mergeChunks(to, completeVideoPath, true);
 
+            // 检查合并后的文件是否包含视频流
+            if (!FFmpegUtil.hasVideoStream(completeVideoPath))
+            {
+                throw new RuntimeException("文件不包含视频流，无法转码");
+            }
+
             // 获取视频时长
             Integer duration = FFmpegUtil.getVideoDuration(completeVideoPath, false);
             if (duration == null)
@@ -94,7 +104,6 @@ public class VideoTransCodingConsumer
             }
 
             // 设置视频文件相关信息
-            fileUpload.setFileName(fileDTO.getFileName());
             fileUpload.setDuration(duration);
             fileUpload.setFileSize(new File(completeVideoPath).length());
             fileUpload.setFilePath(Constants.VIDEO_FOLDER_NAME + "/" + fileDTO.getFilePath());
@@ -154,19 +163,171 @@ public class VideoTransCodingConsumer
      */
     private void convertVideo2Ts(String videoPathStr) throws IOException
     {
-        Path videoPath = Path.of(videoPathStr);
-        String encoding = FFmpegUtil.getVideoEncoding(videoPathStr, false);
-        // 转化为h264编码格式
-        if (!encoding.equals("h264"))
+        String parentPath = Path.of(videoPathStr).getParent().toString();
+        FFmpegUtil.VideoSize sourceSize = FFmpegUtil.getVideoSize(videoPathStr);
+        List <HlsVariant> variants = selectHlsVariants(sourceSize);
+
+        for (HlsVariant variant : variants)
         {
-            // 复制一个视频的临时文件，并将临时文件转化为h264编吗mp4文件并覆盖原文件
-            String tmpVideoPathStr = videoPathStr + Constants.TMP_VIDEO_SUFFIX;
-            Files.copy(videoPath, Path.of(tmpVideoPathStr));
-            FFmpegUtil.convert2Mp4(tmpVideoPathStr, videoPathStr, false);
-            Files.deleteIfExists(Path.of(tmpVideoPathStr));
+            String outputPath = Paths.get(parentPath, variant.folderName()).toString();
+            FFmpegUtil.convertVideo2Ts(videoPathStr,
+                                       outputPath,
+                                       variant.width(),
+                                       variant.height(),
+                                       variant.resolution(),
+                                       variant.videoBitrateKbps(),
+                                       false);
         }
-        FFmpegUtil.convertVideo2Ts(videoPathStr, false);
-        Files.deleteIfExists(Path.of(videoPathStr)); // 删除掉这个tmp_video.mp4
+
+        writeMasterM3u8(Path.of(parentPath), variants);
+        Files.deleteIfExists(Path.of(videoPathStr));
+    }
+
+    private List <HlsVariant> selectHlsVariants(FFmpegUtil.VideoSize sourceSize)
+    {
+        List <HlsVariant> variants = new ArrayList <>();
+        if (sourceSize.height() >= 720)
+        {
+            variants.add(new HlsVariant(VideoResolution.RES_720P.getFolderName(),
+                                        1280,
+                                        720,
+                                        VideoResolution.RES_720P.getResolution(),
+                                        4000,
+                                        4000000,
+                                        3500000,
+                                        "avc1.64001f"));
+        }
+
+        if (sourceSize.height() >= 480)
+        {
+            variants.add(new HlsVariant(VideoResolution.RES_480P.getFolderName(),
+                                        854,
+                                        480,
+                                        VideoResolution.RES_480P.getResolution(),
+                                        1600,
+                                        1600000,
+                                        1400000,
+                                        "avc1.4d401f"));
+        }
+        else
+        {
+            variants.add(new HlsVariant(VideoResolution.RES_480P.getFolderName(),
+                                        evenSize(sourceSize.width()),
+                                        evenSize(sourceSize.height()),
+                                        VideoResolution.RES_480P.getResolution(),
+                                        1600,
+                                        1600000,
+                                        1400000,
+                                        "avc1.4d401f"));
+        }
+
+        return variants;
+    }
+
+    private int evenSize(int value)
+    {
+        if (value <= 2) return 2;
+        return value % 2 == 0 ? value : value - 1;
+    }
+
+    private void writeMasterM3u8(Path parentPath, List <HlsVariant> variants) throws IOException
+    {
+        StringBuilder content = new StringBuilder("""
+                                                  #EXTM3U
+                                                  #EXT-X-VERSION:3
+                                                  #EXT-X-INDEPENDENT-SEGMENTS
+                                                  """);
+        for (HlsVariant variant : variants)
+        {
+            content.append("""
+                           #EXT-X-STREAM-INF:BANDWIDTH=%d,AVERAGE-BANDWIDTH=%d,RESOLUTION=%dx%d,CODECS="%s,mp4a.40.2"
+                           playlist/%d.m3u8
+                           """.formatted(variant.bandwidth(),
+                                          variant.averageBandwidth(),
+                                          variant.width(),
+                                          variant.height(),
+                                          variant.videoCodec(),
+                                          variant.resolution()));
+        }
+        Files.writeString(parentPath.resolve(Constants.MASTER_M3U8_NAME), content.toString(), StandardCharsets.UTF_8);
+    }
+
+    private static class HlsVariant
+    {
+        private final String folderName;
+
+        private final int width;
+
+        private final int height;
+
+        private final int resolution;
+
+        private final int videoBitrateKbps;
+
+        private final int bandwidth;
+
+        private final int averageBandwidth;
+
+        private final String videoCodec;
+
+        private HlsVariant(String folderName,
+                           int width,
+                           int height,
+                           int resolution,
+                           int videoBitrateKbps,
+                           int bandwidth,
+                           int averageBandwidth,
+                           String videoCodec)
+        {
+            this.folderName = folderName;
+            this.width = width;
+            this.height = height;
+            this.resolution = resolution;
+            this.videoBitrateKbps = videoBitrateKbps;
+            this.bandwidth = bandwidth;
+            this.averageBandwidth = averageBandwidth;
+            this.videoCodec = videoCodec;
+        }
+
+        private String folderName()
+        {
+            return folderName;
+        }
+
+        private int width()
+        {
+            return width;
+        }
+
+        private int height()
+        {
+            return height;
+        }
+
+        private int resolution()
+        {
+            return resolution;
+        }
+
+        private int videoBitrateKbps()
+        {
+            return videoBitrateKbps;
+        }
+
+        private int bandwidth()
+        {
+            return bandwidth;
+        }
+
+        private int averageBandwidth()
+        {
+            return averageBandwidth;
+        }
+
+        private String videoCodec()
+        {
+            return videoCodec;
+        }
     }
 
 }
